<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:textAlignment="center"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#009688"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="289dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/fragment_profile"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginTop="400dp"
        android:background="#009688"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/Peter"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginTop="450dp"
        android:background="#FBFBFB"
        android:text="@string/peter"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Aboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:background="#009688"
        android:text="@string/about_me"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/peter"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_padding"
        android:layout_marginTop="450dp"
        android:background="#FBFBFB"
        android:text="@string/peter"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Liu"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="10dp"
        android:text="@string/liu"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="400dp"
        android:background="#009688"
        android:text="@string/Nickname"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/introducion"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

</FrameLayout>